add tests and other correction
